gccida/c0/find_reg_fusage
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/rtlanal.c:2313:33: error: must use 'enum' tag to refer to type 'rtx_code'
int  find_reg_fusage( rtx insn, rtx_code code, rtx datum) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/rtlanal.c:2375:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)datum)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/rtlanal.c:2376:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)datum)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/rtlanal.c:2391:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                   ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/rtlanal.c:2391:48: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                                               ^~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reg_fusage/src/obj/rtlanal.o] Error 1
